<resources>
    <string name="app_name" translatable="false">PP</string>
    <string name="app_slogan">Wenn Du keinen hast, war keiner frei.</string>
    <string name="last_name">Nachname</string>
    <string name="first_name">Vorname</string>
    <string name="email">Firmen E-Mail-Adresse</string>
    <string name="password">******</string>
    <string name="stay_logged">Eingeloggt bleiben</string>
    <string name="work_place">Dienstort</string>
    <string name="button_login">Login</string>
    <string name="button_register_now">Jetzt Registrieren</string>
    <string name="button_register">Registrieren</string>
    <string-array name="employment_places">
        <item>Bad Homburg</item>
    </string-array>
    <string name="title_activity_parkplatz">ParkplatzActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_test">TestActivity</string>

    <!-- NAVIGATION BAR -->
    <string name="bb_title_personal_data">Meine Daten</string>
    <string name="bb_title_parking_place">Mein Parkplatz</string>
    <string name="bb_title_more">Mehr</string>

    <!-- PARKING PLACE FRAGMENT -->
    <string name="no_parking_place">Sorry, du hast heute kein Parkplatz></string>

</resources>
