<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.redone13.pp.loginActivity"
    android:background="#2b2b2b">

    <ImageView
        android:src="@drawable/aia_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/imageView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:textSize="26sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:text="@string/app_slogan"
        android:id="@+id/tv_slogan"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="10dp" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/et_email"
        android:inputType="textEmailAddress"
        android:textSize="18sp"
        android:textColor="#ffffff"
        android:paddingLeft="5dp"
        android:hint="username@domain.com"
        android:layout_below="@+id/tv_slogan"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_edittext" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/et_password"
        android:inputType="textPassword"
        android:paddingLeft="5dp"
        android:hint="@string/password"
        android:textSize="18sp"
        android:textColor="#ffffff"
        android:layout_below="@id/et_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:background="@drawable/rounded_edittext" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_stay_logged"
        android:textSize="16sp"
        android:textColor="#ffffff"
        android:text="@string/stay_logged"
        android:layout_above="@+id/b_login"
        android:layout_alignLeft="@+id/et_password"
        android:layout_alignStart="@+id/et_password" />

    <CheckBox
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:id="@+id/cb_stay_logged"
        android:layout_toRightOf="@id/tv_stay_logged"
        android:layout_below="@id/et_password"
        android:layout_marginLeft="5dp"
        android:checked="true" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="#117028"
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="@string/button_login"
        android:id="@+id/b_login"
        android:layout_below="@+id/cb_stay_logged"
        android:layout_marginTop="15dp"
        android:layout_alignLeft="@+id/et_email"
        android:layout_alignStart="@+id/et_email"
        android:layout_alignRight="@+id/et_email"
        android:layout_alignEnd="@+id/et_email" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="#0f3982"
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="@string/button_register"
        android:id="@+id/b_register"
        android:layout_below="@id/b_login"
        android:layout_marginTop="10dp"
        android:layout_alignLeft="@+id/et_email"
        android:layout_alignStart="@+id/et_email"
        android:layout_alignRight="@+id/et_email"
        android:layout_alignEnd="@+id/et_email" />


</RelativeLayout>
