<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.redone13.pp.registerActivity"
    android:background="#FFB9B9B9">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/last_name"
        android:textSize="24sp"
        android:paddingLeft="10dp"
        android:id="@+id/et_lastname"
        android:background="@drawable/rounded_edittext"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="textPersonName"
        android:hint="@string/first_name"
        android:textSize="24sp"
        android:paddingLeft="10dp"
        android:id="@+id/et_firstname"
        android:background="@drawable/rounded_edittext"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="textEmailAddress"
        android:hint="email"
        android:textSize="24sp"
        android:paddingLeft="10dp"
        android:layout_below="@id/et_email"
        android:background="@drawable/rounded_edittext" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="Wo arbeitest du?"
        android:textSize="24sp"
        android:paddingLeft="10dp"
        android:id="@+id/et_workplace"
        android:background="@drawable/rounded_edittext"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="#ffffff"
            android:text="@string/work_place"
            android:id="@+id/tv_work_place" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:id="@+id/sp_employment_place" >
        </Spinner>

    </LinearLayout>

</LinearLayout>
